--- a/src/components/shared/Carousel/Carousel.module.scss
+++ b/src/components/shared/Carousel/Carousel.module.scss
@@ -4,10 +4,12 @@
     padding: 10px;
     padding-bottom: 0;
   }
-  &_slide {
-    background-color: white;
-    height: fit-content;
-  }
+  // img {
+  //   width: 100%;
+  //   height: 100%;
+  //   object-fit: cover;
+  //   position: relative;
+  // }
 }
 .root  {
   margin-left: 15px;
@@ -24,9 +26,15 @@
   :first-child {
     // width: 100%;
     overflow: auto;
-    display: flex;
-    font-size: 20px;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // font-size: 20px;
+    // justify-content: center;
+    // align-items: center;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      position: relative;
+    }
   }
 }
