--- a/src/components/shared/Carousel/Carousel.module.scss
+++ b/src/components/shared/Carousel/Carousel.module.scss
@@ -1,40 +1,40 @@
+@import "variables";
+
 .carousel {
   margin-left: 15px;
   &_title {
+    font-weight: bold;
+    font-style: italic;
     padding: 10px;
-    padding-bottom: 0;
+    padding-bottom: 3px;
   }
-  // img {
-  //   width: 100%;
-  //   height: 100%;
-  //   object-fit: cover;
-  //   position: relative;
-  // }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+  }
+  &_filmTitle {
+    background-color: $primaryColor;
+    font-weight: bold;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
+    width: fit-content;
+    font-style: italic;
+    z-index: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
 }
-.root  {
+.root {
   margin-left: 15px;
+  gap: 10px;
 }
 
 .slide {
-  background-color: red;
-  cursor: pointer;
-  width: 5%;
-  margin-left: 30px;
   border: solid black 1px;
-  display: flex;
-  align-items: end;
-  :first-child {
-    // width: 100%;
-    overflow: auto;
-    // display: flex;
-    // font-size: 20px;
-    // justify-content: center;
-    // align-items: center;
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      position: relative;
-    }
-  }
+  display: block;
+  margin-right: 2%;
+  position: relative;
 }
