--- a/public/resources/icons/ThinKid.module.scss
+++ b/public/resources/icons/ThinKid.module.scss
@@ -1,7 +1,7 @@
 .thinkKid {
   &_image {
     left: 120px;
-    margin-top: 20px;
+    margin-bottom: 0px;
     position: absolute;
     transform: rotate(-30deg);
     z-index: 1;
@@ -10,11 +10,21 @@
     z-index: 1;
     position: absolute;
     transform: rotate(30deg);
-    margin-left: 270px;
+    margin-left: 370px;
     margin-top: 320px;
   }
   &_svg {
     position: relative;
     z-index: 0;
+  }
+}
+@media (max-width: 900px) {
+  .thinkKid {
+    &_image {
+      visibility: hidden;
+    }
+    &_secondImage {
+      visibility: hidden;
+    }
   }
 }
