--- a/src/components/FilmsHeader/FilmsHeader.module.scss
+++ b/src/components/FilmsHeader/FilmsHeader.module.scss
@@ -4,8 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
-  gap: 40px;
+  padding: 10px;
+  gap: 20px;
   width: 100%;
   background-color: $secondaryColor;
   &_links {
@@ -35,6 +35,18 @@
 
     a:hover::after {
       width: 100%;
+    }
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  // .image {
+  //   display: none;
+  // }
+  .menu {
+    overflow: hidden;
+    &_links {
+      flex-direction: column;
     }
   }
 }
