--- a/src/app/films/[id]/Film.module.scss
+++ b/src/app/films/[id]/Film.module.scss
@@ -32,3 +32,10 @@
 .tab {
   font-size: 17px;
 }
+.rating {
+  padding: 2%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
