--- a/src/app/auth/sign-up/components/RegisterForm.module.scss
+++ b/src/app/auth/sign-up/components/RegisterForm.module.scss
@@ -49,3 +49,20 @@
 .root {
   width: 500px;
 }
+
+.avatars {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 5px;
+}
+.avatar {
+  padding: 2px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  border: solid black 1px;
+  border-radius: 5px;
+  width: fit-content;
+}
