--- a/src/app/user/dashboard/Dashboard.module.scss
+++ b/src/app/user/dashboard/Dashboard.module.scss
@@ -2,7 +2,7 @@
   min-height: 90vh;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   gap: 2%;
   &_user {
     width: 40%;
@@ -10,9 +10,14 @@
     height: 100%;
   }
   &_table {
-    padding: 20px;
+    width: 100%;
+    padding: 2%;
     table {
       margin-top: 10px;
     }
+  }
+  @media (max-width: 900px) {
+    display: flex;
+    flex-direction: column;
   }
 }
