--- a/src/app/user/dashboard/components/UpdateUserForm/UpdateUserForm.module.scss
+++ b/src/app/user/dashboard/components/UpdateUserForm/UpdateUserForm.module.scss
@@ -15,3 +15,19 @@
     padding: 10px;
   }
 }
+.avatars {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 5px;
+}
+.avatar {
+  padding: 2px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  border: solid black 1px;
+  border-radius: 5px;
+  width: fit-content;
+}
